src/test/deca/context/invalid/int_class_name.deca
/*
    Description : Classe nommée int

    Résultat : Erreur contextuelle (règle 1.3 condition implicite)
*/
class int{}
